# nodoze

./: Cargo.toml  LICENSE  README.md  config.toml.example  dist-workspace.toml
.github/workflows/: release.yml
src/: audio.rs  config.rs  daemon.rs  main.rs  service.rs  wizard.rs
