[package]
name = "nodoze"
version = "1.0.0"
edition = "2021"
description = "Keep your speakers awake by playing an inaudible tone periodically"
license = "MIT"
repository = "https://github.com/TwoSlick/nodoze"

[dependencies]
cpal = "0.17"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"

[profile.dist]
inherits = "release"
lto = "thin"
